# simdlog

./: Cargo.toml
benches/: apache.rs  apache_access.rs
samples/: apache_combined.txt  apache_common.txt  apache_error.txt
src/: avx2.rs  lib.rs  macros.rs  stage1.rs
src/apache/: mod.rs  stage1.rs  stage2.rs
src/apache/access/: mod.rs
src/apache/access/avx2/: mod.rs  stage1.rs  stage2.rs
src/apache/error/: mod.rs
src/apache/error/avx2/: stage1.rs  stage2.rs
src/apache_access/: mod.rs
src/apache_access/avx2/: mod.rs  stage1.rs  stage2.rs
src/parsers/: apache.rs  mod.rs  syslog.rs
