[package]
name = "simdlog"
version = "0.1.0"
authors = ["Connor Peticca <cjpet10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = "0.3"
jemallocator = "0.3"

[[bench]]
name = "apache"
harness = false

[profile.bench]
debug = true